add_executable(01_check_dimmension 01_check_dimmension.cu)

add_executable(02_grid_block 02_grid_block.cu)

add_executable(03_sum_arrays 03_sum_arrays.cu)

add_executable(04_sum_arrays_timer 04_sum_arrays_timer.cu)

add_executable(05_thread_index 05_thread_index.cu)

add_executable(06_sum_matrix 06_sum_matrix.cu)